--- a/tudutul_webapp/static/css/landingpage.css
+++ b/tudutul_webapp/static/css/landingpage.css
@@ -1,6 +1,8 @@
+/* --------------CLASSES----------------- */
+
 .container {
     background: rgb(106,21,106);
-background: linear-gradient(90deg, rgba(106,21,106,1) 0%, rgba(145,56,167,1) 50%, rgba(219,142,142,1) 88%, rgba(221,98,137,1) 100%, rgba(245,72,110,1) 100%);
+    background: linear-gradient(90deg, rgba(106,21,106,1) 0%, rgba(145,56,167,1) 50%, rgba(219,142,142,1) 88%, rgba(221,98,137,1) 100%, rgba(245,72,110,1) 100%);
     font-family: 'Lato', sans-serif;
     color: white;
     font-weight: 900;
@@ -31,16 +33,18 @@ background: linear-gradient(90deg, rgba(106,21,106,1) 0%, rgba(145,56,167,1) 50%
 }
 
 .logo {
-    font-size: 45px;
+    font-family: 'Exo 2', sans-serif;
+    font-size: 4vw;
 }
 
 .main {
     height: 80%;
     width: 100%;
+    display: flex;
 }
 
 .mainText {
-    font-size: 70px;
+    font-size: 4.5vw;
     font-weight: 900;
     margin-left: 35%;
     margin-top: 10%;
@@ -60,6 +64,8 @@ nav {
     width: 30%;
 }
 
+
+
 nav > ul {
     margin: none;
     list-style-type: none;
@@ -72,33 +78,35 @@ nav > ul {
 
 nav > ul > li {
     -webkit-text-stroke-width: 0px;
-
+    text-align: center;
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 12px;
+    font-size: 2vw;
 }
 
 
 
-.orange {
+.darkpurple {
     background-color: rgba(106, 21, 106, 1);
 }
 
-.darkorange {
+.lightpurple {
     background-color: rgba(202, 97, 228, 1);
 }
 
-.lightpurple {
+.lily {
     background-color: rgba(153, 102, 255, 1);
 }
 
-.darkpurple {
+.coral {
     background-color: rgba(240, 128, 128, 1);
 }
 
-.red {
+.brownish {
     background-color: rgba(155,72,110,1);
 }
 
@@ -107,11 +115,12 @@ nav > ul > li {
     top: 80%;
     left: -8%;
     display: inline-block;
-    height: 40%;
-    width: 30%;
+    height: 20vw; 
+    width: 30vw;
     border-radius: 50%;
     z-index: 5;
-
+    flex-shrink: 2;
+    
 }
 
 .right {
@@ -119,22 +128,16 @@ nav > ul > li {
     top: 85%;
     left: 15%;
     display: inline-block;
-    height: 50%;
-    width: 30%;
+    height: 25vw; 
+    width: 30vw;
     border-radius: 50%;
     z-index: 6;
     animation: grow 4s ease-in-out forwards infinite alternate;
+    flex-shrink: 2;
+    
 }
 
-@keyframes grow {
-    0% {
-        transform: scale(1);
-    }
 
-    100% {
-        transform: scale(1.2);
-    }
-}
 
 
 
@@ -145,10 +148,12 @@ nav > ul > li {
     top: 65%;
     left: -10%;
     display: inline-block;
-    width: 25%;
-    height: 50%;
+    width: 30vw;
+    height: 25vw;
     border-radius: 50%;
     z-index: 3;
+    flex-shrink: 2;
+    
 }
 
 .upper-right {
@@ -156,11 +161,98 @@ nav > ul > li {
     top: 65%;
     left: 3%;
     display: inline-block;
-    height: 50%;
-    width: 25%;
+    height: 25vw; 
+    width: 25vw;
     border-radius: 50%;
     z-index: 2;
     animation: hide 5s ease-in-out forwards infinite alternate;
+    flex-shrink: 2;
+    
+}
+
+
+
+.center {
+    position: absolute;
+    top: 90%;
+    left: 40%;
+    display: inline-block;
+    height: 30vw; 
+    width: 43vw;
+    border-radius: 50%;
+    z-index: 1;
+    animation: also-move 5s ease-in-out forwards infinite alternate;
+    animation-delay: 1s;
+    flex-shrink: 2;
+    
+}
+
+
+
+.most-right {
+    position: absolute;
+    top: 80%;
+    left: 65%;
+    display: inline-block;
+    height: 35vw; 
+    width: 70vw;
+    border-radius: 50%;
+    z-index: 1;
+    animation: move 5s ease-in-out forwards infinite alternate;
+    animation-delay: 1s;
+    flex-shrink: 2;
+    
+}
+
+/* --------------MEDIA QUERIES----------------- */
+
+@media (min-width: 900px) {
+    nav > ul > li {
+        font-size: 20px;
+    }
+}
+
+/*
+    FIX RESPONSIVENESS OF BLOBS
+*/
+
+@media (max-width: 900px) and (min-height: 400px) {
+    * {
+        --heightwidthratio: 0px;
+    }
+
+    .left {
+        top: 90%;
+        transform: scale(1.5);
+    }
+    .right {
+        top: 85%;
+        width: 35vh;
+        height: 35vh;
+    }
+    .upper-left {
+        top: 75%;
+        height: 15vh;
+        width: 20vh;
+    }
+    .upper-right {
+        top: 75%;
+    }
+    .right-center {
+        top: 80%;
+    }
+}
+
+/* --------------KEYFRAMES----------------- */
+
+@keyframes grow {
+    0% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(1.2);
+    }
 }
 
 @keyframes hide {
@@ -173,18 +265,6 @@ nav > ul > li {
     }
 }
 
-.right-center {
-    position: absolute;
-    top: 90%;
-    left: 40%;
-    display: inline-block;
-    height: 60%;
-    width: 43%;
-    border-radius: 50%;
-    z-index: 1;
-    animation: also-move 5s ease-in-out forwards infinite alternate;
-    animation-delay: 1s;
-}
 
 @keyframes also-move {
     0% {
@@ -196,19 +276,6 @@ nav > ul > li {
     }
 }
 
-.most-right {
-    position: absolute;
-    top: 80%;
-    left: 65%;
-    display: inline-block;
-    height: 70%;
-    width: 70%;
-    border-radius: 50%;
-    z-index: 1;
-    animation: move 5s ease-in-out forwards infinite alternate;
-    animation-delay: 1s;
-}
-
 @keyframes move {
     0% {
         transform: translateX(0);
@@ -218,4 +285,3 @@ nav > ul > li {
         transform: translateY(-10%);
     }
 }
-
