--- a/tudutul_webapp/templates/tudutul-webapp/login.html
+++ b/tudutul_webapp/templates/tudutul-webapp/login.html
@@ -46,11 +46,11 @@
         <div class="flex justify-center items-center">
             <div class="w-3/5  md:w-3/5 lg:w-2/5 h-4/5 bg-background px-10 md:px-5 border-double border-2 border-yellow-300 border-opacity-70 rounded-2xl flex flex-col items-center shadow-xl">
                 <p class="special-text text-yellow-300 font-black text-md mt-20 mb-2">Log into your account</p>
-                <form class="flex flex-col items-center" action="" id="loginForm">
+                <form class="flex flex-col items-center" id="loginForm">
                     <label class="special-text text-indigo-100 text-md mt-5 mb-2" for="login">Login:</label>
-                    <input type="text" name="login" id="login" class="rounded border-2 border-purple-900">
+                    <input type="text" name="login" id="login" class="rounded border-2 border-purple-900" required>
                     <label class="special-text text-indigo-100 text-md mt-5 mb-2" for="password">Password:</label>
-                    <input type="text" name="password" id="password" class="rounded border-2 border-purple-900">
+                    <input type="text" name="password" id="password" class="rounded border-2 border-purple-900" required>
                 </form>
                 <button 
                     class="inline-block mt-10 mb-5 py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2" 
