--- a/tudutul_webapp/templates/tudutul-webapp/register.html
+++ b/tudutul_webapp/templates/tudutul-webapp/register.html
@@ -8,6 +8,7 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static "css/tailwind_compiled.css" %}"
     />
+    <script src="{% static "js/account.js" %}" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
     <title>Login</title>
 </head>
@@ -35,24 +36,30 @@
                 <p class="text-white specialtext font-black text-5xl ml-10 lg:ml-20 md:text-7xl lg:text-9xl"><mark class="redMain">Tu</mark><mark class="blueMain">Du</mark>lians.</p>
             </div>
         </div>
-        <div class="flex justify-center items-center">
+        <div class="flex flex-col justify-center items-center">
             <div class="w-3/5  md:w-3/5 lg:w-2/5 h-4/5 bg-background px-10 md:px-5 border-double border-2 border-yellow-300 border-opacity-70 rounded-2xl flex flex-col items-center shadow-xl">
                 <p class="special-text text-yellow-300 font-black text-md mt-10 mb-2">Create account</p>
-                <form class="flex flex-col items-center" action="" id="registerForm">
+                
+                <form class="flex flex-col items-center" onsubmit="console.log('SUBMITTED'); sendRegistrationData(this); return false;" id="registerForm">
                     <label class="special-text text-indigo-100 text-md mt-5 mb-2" for="login">Login:</label>
                     <input type="text" name="login" id="login" class="rounded border-2 border-purple-900">
+
+                    <label class="special-text text-indigo-100 text-md mt-5 mb-2" for="email">Email:</label>
+                    <input type="text" name="email" id="email" class="rounded border-2 border-purple-900">
+                    
                     <label class="special-text text-indigo-100 text-md mt-5 mb-2" for="password">Password:</label>
                     <input type="text" name="password" id="password" class="rounded border-2 border-purple-900">
+                    
                     <label class="special-text text-indigo-100 text-md mt-5 mb-2" for="repeatpassword">Repeat password:</label>
                     <input type="text" name="repeatpassword" id="repeatpassword" class="rounded border-2 border-purple-900">
+                    <input 
+                        type="submit"  
+                        class="inline-block mt-10 mb-5 py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2" 
+                        value="Send"    
+                    >
                 </form>
-                <button 
-                    class="inline-block mt-10 mb-5 py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2" 
-                    form="loginForm" 
-                    type="submit"
-                >Enter</button>
-                <div id="output"></div>
             </div>
+            <div class="w-3/5  md:w-3/5 lg:w-2/5 mx-auto h-auto bg-background px-4 py-2 font-black text-yellow-300 text-center rounded-2xl hidden " id="output"></div>
             
         </div>
     </div>
