--- a/tudutul_webapp/templates/tudutul-webapp/register.html
+++ b/tudutul_webapp/templates/tudutul-webapp/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static "css/tailwind_compiled.css" %}"
+    <link rel="stylesheet" type="text/css" href='{% static "css/tailwind_compiled.css" %}'
     />
     <script src="{% static "js/account.js" %}" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
