--- a/tudutul_webapp/templates/register/register.html
+++ b/tudutul_webapp/templates/register/register.html
@@ -37,27 +37,27 @@
             </div>
         </div>
         <div class="flex flex-col justify-center items-center">
-            <div class="w-3/5  md:w-3/5 lg:w-2/5 h-4/5 bg-background px-10 md:px-5 border-double border-2 border-yellow-300 border-opacity-70 rounded-2xl flex flex-col items-center shadow-xl">
-                <p class="special-text text-yellow-300 font-black text-md mt-10 mb-2">Create account</p>
+            <div class="w-3/5  md:w-3/5 lg:w-2/5 h-4/5 bg-background px-10 md:px-5 border-double border-2 border-yellow-300 border-opacity-70 rounded-2xl flex flex-col justify-center items-center shadow-xl">
+                <p class="special-text text-yellow-300 font-black text-md ">Create account</p>
                 <p class="text-white">{{ans}}</p>
-                
+
                 <form class="flex flex-col items-center" method="POST">
                     {% csrf_token %}
-                    <label class="special-text text-indigo-100 text-md mt-5 mb-2" >Email:</label>
+                    <label class="special-text text-indigo-100 text-md " >Email:</label>
                     <input type="email" name="email" id="email" class="rounded border-2 border-purple-900">
 
-                    <label class="special-text text-indigo-100 text-md mt-5 mb-2" >Login:</label>
+                    <label class="special-text text-indigo-100 text-md " >Login:</label>
                     <input type="text" name="login" id="login" class="rounded border-2 border-purple-900">
 
-                    <label class="special-text text-indigo-100 text-md mt-5 mb-2" >Password:</label>
+                    <label class="special-text text-indigo-100 text-md" >Password:</label>
                     <input type="password" name="pass" id="pass" class="rounded border-2 border-purple-900">
-                    
-                    <label class="special-text text-indigo-100 text-md mt-5 mb-2" >Repeat password:</label>
+
+                    <label class="special-text text-indigo-100 text-md " >Repeat password:</label>
                     <input type="password" name="repeated_pass" id="repeated_pass" class="rounded border-2 border-purple-900">
                     <input 
-                        type="submit"  
-                        class="inline-block mt-10 mb-5 py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2" 
-                        value="Send"    
+                        type="submit"
+                        class="inline-block py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2" 
+                        value="Send"
                     >
                 </form>
             </div>
