--- a/tudutul_webapp/templates/account/account.html
+++ b/tudutul_webapp/templates/account/account.html
@@ -35,22 +35,22 @@
 
     
     <div class="mx-auto w-1/2 h-3/4 m-0 p-0 flex items-center justify-center">
-        <div class="px-10 md:px-5 h-3/5 bg-background border-solid border-2 border-r-0 border-yellow-300 border-opacity-70 rounded-2xl rounded-r-none flex flex-col  justify-center items-center shadow-xl">
+        <div class="px-10 md:px-5 h-4/6 bg-background border-solid border-2 border-r-0 border-yellow-300 border-opacity-70 rounded-2xl rounded-r-none flex flex-col  justify-center items-center shadow-xl">
             <!-- Tutaj profil: PROFIL UŻYTKOWNIKA Login: {login} Email: {email} Zdjęcie -->
             <h2 class="mt-10 inline-block mb-5 text-indigo-100 hover:text-indigo-100 text-2xl md:text-3xl lg:text-4xl">Profil Użytkownika</h2>
             <p class="inline-block mb-5 text-indigo-100 text-2xl md:text-3xl lg:text-4xl">Login: <mark class="redMain font-italic">{{userLogin}}</mark></p>
             <p class="inline-block mb-5 text-indigo-100 text-2xl md:text-3xl lg:text-4xl">Email: <mark class="redMain font-italic">{{userLogin}}@gmail.com</mark></p>
             <i class="far fa-user text-8xl p-8 text-yellow-300"></i>
         </div>
-        <div class="h-3/5 bg-background px-10 md:px-5 border-solid border-2 border-l-4 border-yellow-300 border-opacity-30 rounded-2xl rounded-l-none flex flex-col items-center shadow-xl">
+        <div class="h-4/6 bg-background px-10 md:px-5 border-solid border-2 border-l-4 border-yellow-300 border-opacity-30 rounded-2xl rounded-l-none flex flex-col items-center shadow-xl">
             <!-- Tutaj małe menu, od góry: Ustawienia Tabele Kalendarz -->
             <div class="flex flex-col justify-center items-center">
                 <p class="mt-10 p-2 text-indigo-100 mx-2">Ustawienia</p>
-                <i class="fas fa-cogs text-5xl text-white"></i>
+                <i class="fas fa-cogs text-5xl text-white flex-shrink"></i>
                 <p class="mt-10 p-2 text-indigo-100 mx-2">Tabele</p>
-                <i class="fas fa-table text-5xl text-white"></i>
+                <i class="fas fa-table text-5xl text-white flex-shrink"></i>
                 <p class="mt-10 p-2 text-indigo-100 mx-2">Kalendarz</p>
-                <i class=" my-1 far fa-calendar-alt text-5xl text-white"></i>
+                <i class=" my-1 far fa-calendar-alt text-5xl text-white flex-shrink"></i>
                 
             </div>
         </div>
