--- a/tudutul_webapp/templates/register/register.html
+++ b/tudutul_webapp/templates/register/register.html
@@ -44,16 +44,16 @@
                 <form class="flex flex-col items-center" method="POST">
                     {% csrf_token %}
                     <label class="special-text text-indigo-100 text-md " >Email:</label>
-                    <input type="email" name="email" id="email" class="rounded border-2 border-purple-900">
+                    <input type="email" name="email" id="email" class="rounded border-2 border-purple-900 flex-shrink">
 
                     <label class="special-text text-indigo-100 text-md " >Login:</label>
-                    <input type="text" name="login" id="login" class="rounded border-2 border-purple-900">
+                    <input type="text" name="login" id="login" class="rounded border-2 border-purple-900 flex-shrink">
 
                     <label class="special-text text-indigo-100 text-md" >Password:</label>
-                    <input type="password" name="pass" id="pass" class="rounded border-2 border-purple-900">
+                    <input type="password" name="pass" id="pass" class="rounded border-2 border-purple-900 flex-shrink">
 
                     <label class="special-text text-indigo-100 text-md " >Repeat password:</label>
-                    <input type="password" name="repeated_pass" id="repeated_pass" class="rounded border-2 border-purple-900">
+                    <input type="password" name="repeated_pass" id="repeated_pass" class="rounded border-2 border-purple-900 flex-shrink">
                     <input 
                         type="submit"
                         class="inline-block py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2" 
