--- a/tudutul_webapp/src/css/tailwind.css
+++ b/tudutul_webapp/src/css/tailwind.css
@@ -94,3 +94,25 @@ section .wave.wave4
         background-position-x: -1000px;
     }
 }
+
+slow-bounce-animation {
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    transform-origin: bottom;
+}
+
+slow-bounce-animation:hover {
+    animation-name: bounce;
+    animation-timing-function: ease;
+}
+
+@keyframes bounce {
+    0%, 100% {
+      transform: translateY(-25%);
+      animationTimingFunction: cubic-bezier(0.8, 0, 1, 1);
+    }
+    50% {
+      transform: translateY(0);
+      animationTimingFunction: cubic-bezier(0, 0, 0.2, 1);
+    }
+}   
