--- a/tudutul_webapp/static/css/tailwind_compiled.css
+++ b/tudutul_webapp/static/css/tailwind_compiled.css
@@ -32130,6 +32130,33 @@ section .wave.wave4
   }
 }
 
+slow-bounce-animation {
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  transform-origin: bottom;
+}
+
+slow-bounce-animation:hover {
+  -webkit-animation-name: bounce;
+          animation-name: bounce;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(-25%);
+    animationTimingFunction: cubic-bezier(0.8, 0, 1, 1);
+  }
+
+  50% {
+    transform: translateY(0);
+    animationTimingFunction: cubic-bezier(0, 0, 0.2, 1);
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
@@ -188563,4 +188590,4 @@ section .wave.wave4
   .\32xl\:backdrop-sepia {
     --tw-backdrop-sepia: sepia(100%);
   }
-}
+}   
