--- a/tudutul_webapp/templates/tudutul-webapp/index.html
+++ b/tudutul_webapp/templates/tudutul-webapp/index.html
@@ -24,9 +24,12 @@
 
         <!--   right side -->
         <div class="flex justify-center mt-2 text-sm md:text-md md:m-0">
-          <a href="account/login" class="inline-block p-2 text-indigo-100 hover:text-indigo-100 mx-2">Login</a>
-          <a href="account/register" class="inline-block py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2">Sign Up</a>
-          <a href="noaccount" class="inline-block p-2 text-indigo-100 hover:text-indigo-100 mx-2">Continue Without Account</a>
+          <a href="account/login" class="inline-block p-2 bg-indigo-200 hover:bg-indigo-100 text-background mx-2 font-bold rounded-md transition ease-in duration-300 shadow-2xl">Login</a>
+          <a href="account/register" class="inline-block py-2 px-4 text-yellow-400 bg-yellow-200 hover:bg-yellow-300 hover:text-yellow-800 font-bold rounded transition ease-in duration-300 mx-2 shadow-2xl">Sign Up</a>
+          <a href="noaccount" class="inline-block p-2 text-indigo-100 hover:text-indigo-100 font-bold mx-2 hover:shadow-2xl">Use Offline</a>
+          <span class="flex h-3 w-3">
+            <span class="animate-ping relative inline-flex rounded-full h-3 w-3 bg-purple-500"></span>
+          </span>
         </div>
 
     </nav>
