--- a/tudutul_webapp/templates/tudutul-webapp/login.html
+++ b/tudutul_webapp/templates/tudutul-webapp/login.html
@@ -25,9 +25,9 @@
 
         <!--   right side -->
         <div class="flex justify-center mt-2 text-sm md:text-md md:m-0">
-          <a href="login" class="inline-block p-2 text-indigo-100 hover:text-indigo-100 mx-2">Login</a>
-          <a href="register" class="inline-block py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2">Sign Up</a>
-          <a href="noaccount" class="inline-block p-2 text-indigo-100 hover:text-indigo-100 mx-2">Continue Without Account</a>
+          <a href="login" class="inline-block p-2 text-indigo-100 hover:text-indigo-100 font-bold mx-2">Login</a>
+          <a href="register" class="inline-block py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 font-bold rounded transition ease-in duration-150 mx-2">Sign Up</a>
+          <a href="noaccount" class="inline-block p-2 text-indigo-100 hover:text-indigo-100 font-bold mx-2">Continue Without Account</a>
         </div>
 
     </nav>
