--- a/tudutul_webapp/templates/index.html
+++ b/tudutul_webapp/templates/index.html
@@ -11,7 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href='{% static "fontawesome/css/all.css" %}'
+    />
 
 </head>
 <body class="mx-auto h-screen mainBackground p-0 m-0 overflow-hidden">
@@ -23,16 +25,20 @@
         </div>
 
         <!--   right side -->
+        {% block navbuttons %}
         <div class="flex justify-center mt-2 text-sm md:text-md md:m-0">
           <a href="account/login" class="inline-block p-2 bg-indigo-200 hover:bg-indigo-100 text-background mx-2 font-bold rounded-md transition ease-in duration-300 shadow-2xl">Login</a>
-          <a href="account/register" class="inline-block py-2 px-4 text-yellow-400 bg-yellow-200 hover:bg-yellow-300 hover:text-yellow-800 font-bold rounded transition ease-in duration-300 mx-2 shadow-2xl">Sign Up</a>
+          <a href="account/register" class="inline-block py-2 px-4 text-background bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 font-bold rounded transition ease-in duration-300 mx-2 shadow-2xl">Sign Up</a>
           <a href="noaccount" class="inline-block p-2 text-indigo-100 hover:text-indigo-100 font-bold mx-2 hover:shadow-2xl">Use Offline</a>
           <span class="flex h-3 w-3">
             <span class="animate-ping relative inline-flex rounded-full h-3 w-3 bg-purple-500"></span>
           </span>
         </div>
+        {% endblock %}
 
     </nav>
+
+    {% block main %}
     <div class="h-2/5">
         <div class="h-full flex flex-col justify-start  items-center mt-20 md:mt-15 font-black text-2xl sm:text-4xl md:text-5xl lg:text-6xl 2xl:text-7xl text-white">
                 <p class="z-10">Always know what you need</p> 
@@ -51,6 +57,8 @@
         <div class="wave wave3"></div>
         <div class="wave wave4"></div>
     </section>
+
+    {% endblock %}
     
         
         <!-- <span class="darkpurple left"></span>
