--- a/tudutul_webapp/templates/index.html
+++ b/tudutul_webapp/templates/index.html
@@ -16,7 +16,7 @@
     />
 
 </head>
-<body class="mx-auto h-screen mainBackground p-0 m-0 overflow-hidden">
+<body class="mx-auto h-screen mainBackground p-0 m-0">
     <nav class="z-10 mx-auto bg-background bg-opacity-90 border-b-4 border-black m-0 pt-3 pb-3 md:pt-7 md:pb-7 block md:flex justify-around items-center ">
 
         <!--   left side -->
