--- a/tudutul_webapp/templates/login/login.html
+++ b/tudutul_webapp/templates/login/login.html
@@ -2,38 +2,96 @@
 
 {% block main %}
 <!-- the main div -->
-    <div class="mx-auto container h-3/4 m-0 p-0 md:grid md:grid-cols-2">
+    <div class="mx-auto container h-3/4 m-0 p-0 flex flex-col lg:flex-row-reverse">
 
         <!-- -->
-        <div class="mx-auto w-full flex flex-col justify-center items-center ml-15">
+        <div class="w-full flex flex-col justify-center items-center">
             <div class="mt-5 mb-10 md:my-0">
-                <p class="text-white specialtext font-black text-5xl ml-10 lg:ml-20 md:text-7xl lg:text-9xl ">Get</p>
-                <p class="text-white specialtext font-black text-5xl ml-10 lg:ml-20 md:text-7xl lg:text-9xl">everything</p>
-                <p class="text-white specialtext font-black text-5xl ml-10 lg:ml-20 md:text-7xl lg:text-9xl"><mark class="redMain">Du</mark><mark class="blueMain">Ne.</mark></p>
+                <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl ">Get</p>
+                <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl">everything</p>
+                <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl"><mark class="redMain">Du</mark><mark class="blueMain">Ne.</mark></p>
             </div>
         </div>
-        <div class="flex justify-center items-center">
+        <div class="mt-5 w-full flex justify-center items-center mb-10 md:mb-0">
+            <div class="mx-10 w-4/5 flex flex-col ">
+                <p class="special-text text-yellow-300 font-black text-md mb-2 text-2xl">Login</p>
+                <p class="special-text text-white font-bold text-md mb-10">You're one step away from TuDuTul.</p>
+                
+                <form class="flex flex-col gap-7" method="POST">
+                    {% csrf_token %}
 
-            <div class="w-3/5  md:w-3/5 lg:w-2/5 h-4/5 bg-background px-10 md:px-5 border-double border-2 border-yellow-300 border-opacity-70 rounded-2xl flex flex-col items-center shadow-xl">
-                <p class="special-text text-yellow-300 font-black text-md mt-20 mb-2">Log into your account</p>
-                <p class="text-white">{{ans}}</p>
-                <form method="POST" class="flex flex-col items-center" id="loginForm"> {% csrf_token %}
-                    <label class="special-text text-indigo-100 text-md mt-5 mb-2" for="login">Login:</label>
-                    <input type="text" name="login" id="login" class="rounded border-2 border-purple-900" required>
-                    <label class="special-text text-indigo-100 text-md mt-5 mb-2" for="password">Password:</label>
-                    <input type="password" name="password" id="password" class="rounded border-2 border-purple-900" required>
+                    <p class="text-white">{{ans}}</p>
+    
+                    <div class="gap-3 flex flex-col h-full">
+                    <label class="special-text tracking-wider text-indigo-100 text-lg font-bold  " >Login:</label>
+                    <input type="text" name="login" id="login" class="border-b-2 border-yellow-300  p-2 bg-transparent border-0 text-white tracking-wider flex-shrink max-w-md">
+                    </div>
+
+                    <div class="gap-3 flex flex-col h-full">
+                    <label class="special-text tracking-wider text-indigo-100 text-lg font-bold " >Password:</label>
+                    <input type="password" name="password" id="password" class="border-b-2 border-yellow-300 p-2 bg-transparent border-0 text-white tracking-wider flex-shrink max-w-md">
+                    </div>
+
+                    <input
+                        type="submit"
+                        class="max-w-md inline-block py-2 px-4 shadow-xl text-background font-black bg-yellow-400 hover:bg-yellow-300 hover:text-white rounded transition ease-in duration-400"
+                        value="Login"
+                    >
+
                 </form>
-                <button
-                    class="inline-block mt-10 mb-5 py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2"
-                    form="loginForm"
-                    type="submit"
-                >Enter</button>
 
+                <p class="mt-5 redMain font-bold tracking-wide">Already have an account? <a class="blueMain" href="/account/login">Login here</a></p>
             </div>
+                
+                <!-- <p class="special-text text-yellow-300 font-black text-md ">Create account</p>
+                <p class="text-white">{{ans}}</p>
+
+                <form class="flex flex-col items-center" method="POST">
+                    {% csrf_token %}
+                    <label class="special-text text-indigo-100 text-md " >Email:</label>
+                    <input type="email" name="email" id="email" class="rounded border-2 border-purple-900 flex-shrink">
+
+                    <label class="special-text text-indigo-100 text-md " >Login:</label>
+                    <input type="text" name="login" id="login" class="rounded border-2 border-purple-900 flex-shrink">
+
+                    <label class="special-text text-indigo-100 text-md" >Password:</label>
+                    <input type="password" name="pass" id="pass" class="rounded border-2 border-purple-900 flex-shrink">
+
+                    <label class="special-text text-indigo-100 text-md " >Repeat password:</label>
+                    <input type="password" name="repeated_pass" id="repeated_pass" class="rounded border-2 border-purple-900 flex-shrink">
+                    <input
+                        type="submit"
+                        class="inline-block py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2"
+                        value="Send"
+                    >
+                </form> -->
+            
+            
 
         </div>
     </div>
 {% endblock %}
+
+<!-- <div class="flex justify-center items-center">
+
+    <div class="w-3/5  md:w-3/5 lg:w-2/5 h-4/5 bg-background px-10 md:px-5 border-double border-2 border-yellow-300 border-opacity-70 rounded-2xl flex flex-col items-center shadow-xl">
+        <p class="special-text text-yellow-300 font-black text-md mt-20 mb-2">Log into your account</p>
+        <p class="text-white">{{ans}}</p>
+        <form method="POST" class="flex flex-col items-center" id="loginForm"> {% csrf_token %}
+            <label class="special-text text-indigo-100 text-md mt-5 mb-2" for="login">Login:</label>
+            <input type="text" name="login" id="login" class="rounded border-2 border-purple-900" required>
+            <label class="special-text text-indigo-100 text-md mt-5 mb-2" for="password">Password:</label>
+            <input type="password" name="password" id="password" class="rounded border-2 border-purple-900" required>
+        </form>
+        <button
+            class="inline-block mt-10 mb-5 py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2"
+            form="loginForm"
+            type="submit"
+        >Enter</button>
+
+    </div>
+
+</div> -->
 
 <!--<!DOCTYPE html>-->
 <!--<html lang="en">-->
