--- a/tudutul_webapp/templates/register/register.html
+++ b/tudutul_webapp/templates/register/register.html
@@ -1,17 +1,56 @@
 {% extends "../index.html" %}
 
 {% block main %}
-<div class="mx-auto container h-3/4 m-0 p-0 md:grid md:grid-cols-2">
-        <div class="mx-auto w-full flex flex-col justify-center items-center ml-15">
+<div class="mx-auto container h-3/4 m-0 p-0 flex flex-col lg:flex-row-reverse">
+        <div class="w-full flex flex-col justify-center items-center ">
             <div class="mt-5 mb-10 md:my-0">
-                <p class="text-white specialtext font-black text-5xl ml-10 lg:ml-20 md:text-7xl lg:text-9xl ">Join</p>
-                <p class="text-white specialtext font-black text-5xl ml-10 lg:ml-20 md:text-7xl lg:text-9xl">the</p>
-                <p class="text-white specialtext font-black text-5xl ml-10 lg:ml-20 md:text-7xl lg:text-9xl"><mark class="redMain">Tu</mark><mark class="blueMain">Du</mark>lians.</p>
+                <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl ">Join</p>
+                <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl">the</p>
+                <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl"><mark class="redMain">Tu</mark><mark class="blueMain">Du</mark>lians.</p>
             </div>
         </div>
-        <div class="flex flex-col justify-center items-center">
-            <div class="w-3/5  md:w-3/5 lg:w-2/5 h-4/5 bg-background px-10 md:px-5 border-double border-2 border-yellow-300 border-opacity-70 rounded-2xl flex flex-col justify-center items-center shadow-xl">
-                <p class="special-text text-yellow-300 font-black text-md ">Create account</p>
+        <div class="mt-5 w-full flex justify-center items-center mb-10 md:mb-0">
+            <div class="mx-10 md:mt-10 md:mb-5 w-4/5 flex flex-col ">
+                <p class="special-text text-yellow-300 font-black text-md mb-2 text-2xl">Want to sign up?</p>
+                <p class="special-text text-white font-bold text-md mb-10">Fill out the form.</p>
+                
+                <form class="flex flex-col gap-5" method="POST">
+                    {% csrf_token %}
+
+                    <p class="text-white">{{ans}}</p>
+                    <div class="gap-3 flex flex-col h-full">
+                        <label class="special-text tracking-wider text-indigo-100 text-lg font-bold " >Email address:</label>
+                        <input type="email" name="email" id="email" placeholder="example@mail.com" class="placeholder-gray-100 placeholder-opacity-50 border-b-2 border-yellow-300 focus:border-yellow-200 focus:border-r-0 focus:border-l-0 focus:border-t-0 p-2 bg-transparent border-0 text-white tracking-wider flex-shrink max-w-md">
+                    </div>
+                    
+                    <div class="gap-3 flex flex-col h-full">
+                    <label class="special-text tracking-wider text-indigo-100 text-lg font-bold  " >Login:</label>
+                    <input type="text" name="login" id="login" class="border-b-2 border-yellow-300  p-2 bg-transparent border-0 text-white tracking-wider flex-shrink max-w-md">
+                    </div>
+
+                    <div class="gap-3 flex flex-col h-full">
+                    <label class="special-text tracking-wider text-indigo-100 text-lg font-bold " >Choose Password:</label>
+                    <input type="password" name="pass" id="pass" class="border-b-2 border-yellow-300 p-2 bg-transparent border-0 text-white tracking-wider flex-shrink max-w-md">
+                    </div>
+
+
+                    <div class="gap-3 flex flex-col h-full">
+                    <label class="special-text tracking-wider text-indigo-100 text-lg font-bold  " >Repeat password:</label>
+                    <input type="password" name="repeated_pass" id="repeated_pass" class="border-b-2 border-yellow-300 p-2 bg-transparent border-0 text-white tracking-wider flex-shrink max-w-md">
+                    </div>
+
+                    <input
+                        type="submit"
+                        class="max-w-md inline-block py-2 px-4 shadow-xl text-background font-black bg-yellow-400 hover:bg-yellow-300 hover:text-white rounded transition ease-in duration-400"
+                        value="Create account"
+                    >
+
+                </form>
+
+                <p class="mt-5 redMain font-bold tracking-wide">Already have an account? <a class="blueMain hover:text-white" href="/account/login">Login here</a></p>
+            </div>
+                
+                <!-- <p class="special-text text-yellow-300 font-black text-md ">Create account</p>
                 <p class="text-white">{{ans}}</p>
 
                 <form class="flex flex-col items-center" method="POST">
@@ -32,12 +71,12 @@
                         class="inline-block py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2"
                         value="Send"
                     >
-                </form>
-            </div>
-            <div class="w-3/5  md:w-3/5 lg:w-2/5 mx-auto h-auto bg-background px-4 py-2 font-black text-yellow-300 text-center rounded-2xl hidden " id="output"></div>
+                </form> -->
+            
+            
 
         </div>
-    </div>
+</div>
 {% endblock %}
 
 <!--<!DOCTYPE html>-->
