add offline notes

--- a/tudutul_webapp/templates/login/login.html
+++ b/tudutul_webapp/templates/login/login.html
@@ -5,7 +5,7 @@
     <div class="mx-auto container h-3/4 m-0 p-0 flex flex-col lg:flex-row-reverse">
 
         <!-- -->
-        <div class="w-full flex flex-col justify-center items-center">
+        <div class="w-full h-full flex flex-col justify-center items-center">
             <div class="mt-5 mb-10 md:my-0">
                 <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl ">Get</p>
                 <p class="text-white specialtext font-black text-6xl ml-5 lg:ml-20 md:text-7xl lg:text-9xl">everything</p>
@@ -42,29 +42,7 @@
 
                 <p class="mt-5 redMain font-bold tracking-wide">Already have an account? <a class="blueMain" href="/account/login">Login here</a></p>
             </div>
-                
-                <!-- <p class="special-text text-yellow-300 font-black text-md ">Create account</p>
-                <p class="text-white">{{ans}}</p>
 
-                <form class="flex flex-col items-center" method="POST">
-                    {% csrf_token %}
-                    <label class="special-text text-indigo-100 text-md " >Email:</label>
-                    <input type="email" name="email" id="email" class="rounded border-2 border-purple-900 flex-shrink">
-
-                    <label class="special-text text-indigo-100 text-md " >Login:</label>
-                    <input type="text" name="login" id="login" class="rounded border-2 border-purple-900 flex-shrink">
-
-                    <label class="special-text text-indigo-100 text-md" >Password:</label>
-                    <input type="password" name="pass" id="pass" class="rounded border-2 border-purple-900 flex-shrink">
-
-                    <label class="special-text text-indigo-100 text-md " >Repeat password:</label>
-                    <input type="password" name="repeated_pass" id="repeated_pass" class="rounded border-2 border-purple-900 flex-shrink">
-                    <input
-                        type="submit"
-                        class="inline-block py-2 px-4 shadow-xl text-yellow-700 bg-yellow-400 hover:bg-yellow-300 hover:text-yellow-800 rounded transition ease-in duration-150 mx-2"
-                        value="Send"
-                    >
-                </form> -->
             
             
 
