--- a/tudutul_webapp/templates/account/account.html
+++ b/tudutul_webapp/templates/account/account.html
@@ -13,17 +13,16 @@
 {% endblock %}
 
 {% block main %}
-<div class="mx-auto w-1/2 h-3/4 m-0 p-0 flex flex-col items-center justify-center">
+<!-- <div class="mx-auto w-1/2 h-3/4 m-0 p-0 flex flex-row items-center justify-center">
     <div class="px-10 md:px-5 h-4/6 bg-background hover:bg-opacity- transition ease-in duration-150 border-solid border-2 border-yellow-300 border-opacity-70 rounded-2xl rounded-r-none flex flex-col  justify-center items-center shadow-xl">
-        <!-- Tutaj profil: PROFIL UŻYTKOWNIKA Login: {login} Email: {email} Zdjęcie -->
+        
         <h2 class="mt-10 inline-block mb-5 text-indigo-100 hover:text-indigo-100 text-2xl md:text-3xl lg:text-4xl">Profil Użytkownika</h2>
         <p class="inline-block mb-5 text-indigo-100 text-2xl md:text-3xl lg:text-4xl">Login: <mark class="redMain font-italic">{{userLogin}}</mark></p>
         <p class="inline-block mb-5 text-indigo-100 text-2xl md:text-3xl lg:text-4xl">Email: <mark class="redMain font-italic">{{userLogin}}@gmail.com</mark></p>
         <i class="far fa-user text-8xl p-8 text-yellow-300"></i>
     </div>
     <div class="bg-background px-10 md:px-5 border-solid border-2 border-yellow-300 border-opacity-30 rounded-2xl flex flex-col items-center shadow-xl">
-        <!-- Tutaj małe menu, od góry: Ustawienia Tabele Kalendarz -->
-        <div class="flex justify-center items-center">
+        <div class="flex flex-col justify-center items-center">
             <p class="mt-10 p-2 text-indigo-100 mx-2">Ustawienia</p>
             <i class="fas fa-cogs text-5xl text-white flex-shrink"></i>
             <p class="mt-10 p-2 text-indigo-100 mx-2">Tabele</p>
@@ -31,6 +30,36 @@
             <p class="mt-10 p-2 text-indigo-100 mx-2">Kalendarz</p>
             <i class=" my-1 far fa-calendar-alt text-5xl text-white flex-shrink"></i>
 
+        </div>
+    </div>
+</div> -->
+<div class="w-full flex flex-col">
+    <div class="mt-5 w-full  flex justify-center items-center mb-10 md:mb-0">
+        <div class="w-full md:w-3/5 flex gap-7 flex-col justify-center items-center">
+            <p class="special-text tracking-widest p-2 text-white text-center text-5xl font-bold">User profile</p>
+            <div class="gap-3 flex flex-col h-full justify-center items-center">
+                <p class="special-text tracking-wider text-indigo-100 text-3xl font-bold" >Login</p>
+                <p class="special-text tracking-wide text-yellow-300 text-xl">{{userLogin}}</p>
+            </div>
+            <div class="gap-3 flex flex-col h-full justify-center items-center">
+                <p class="special-text tracking-wider text-indigo-100 text-3xl font-bold" >Email</p>
+                <p class="special-text tracking-wide text-yellow-300 text-xl">{{userLogin}}</p>
+            </div>
+            <i class="far fa-user text-8xl p-6 text-yellow-300"></i>
+        </div>
+    </div>
+    <div class="w-full flex justify-center items-center mb-10 md:mb-0">
+        <div class="w-full flex flex-row justify-around items-center">
+            <!-- <p class="mb-2 text-indigo-100 text-sm sm:text-base mx-2">Ustawienia</p>
+            <i class="fas fa-cogs text-3xl sm:text-5xl text-white flex-shrink"></i> -->
+            <div class="flex flex-col h-full justify-center items-center">
+                <p class="mt-10 p-2 text-indigo-100 text-sm sm:text-base mx-2">Tabele</p>
+                <i class="fas fa-table text-3xl sm:text-5xl text-white"></i>
+            </div>
+            <div class="flex flex-col h-full justify-center items-center">
+                <p class="mt-10 p-2 text-indigo-100 text-sm sm:text-base mx-2">Kalendarz</p>
+                <i class=" my-1 far fa-calendar-alt text-3xl sm:text-5xl text-white "></i>
+            </div>
         </div>
     </div>
 </div>
