--- a/tudutul_webapp/templates/note-app/offline-notes.html
+++ b/tudutul_webapp/templates/note-app/offline-notes.html
@@ -4,49 +4,120 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TuDuTul</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href='{% static "css/tailwind_compiled.css" %}'
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href='{% static "fontawesome/css/all.css" %}'
     />
-    
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="mx-auto w-screen h-screen mainBackground p-0 m-0">
 
-        <!-- NAVBAR -->
-        <div class="w-1/6 h-screen bg-background border-r-2 border-yellow-300 rounded flex flex-col items-center">
-            <span class="text-2xl font-black text-white my-5"><span class="redMain">Tu</span><span class="blueMain">Du</span>Tul</span>
+    {% block scripts %}
+    <script src='{% static "js/offline_notes.js" %}' defer></script>
+    {% endblock %}
+
+</head>
+<body class="mx-auto overflow-visible xl:overflow-hidden flex h-screen mainBackground p-0 m-0">
+    <!-- <div class="w-full h-1/7 flex ">
+        <div class="p-4 w-1/10 flex justify-center items-center">
+            <i class="fas fa-bars text-white text-2xl"></i>
+        </div>
+        <div class="p-4 w-8/10 flex justify-center items-center">
+            <div class="flex flex-col justify-center items-center">
+                <a href="/" class="specialtext text-white font-black text-5xl "><mark class="redMain">Tu</mark><mark class="blueMain">Du</mark>Tul</a>
+            </div>
+        </div>
+        <div class="w-1/10"></div>
+    </div>
+
+    <div class="flex justify-center items-center">
+    {% block app_section %}
+        <span class="specialtext text-white font-bold tracking-widest text-lg md:text-xl mx-3">26/05/2021</span>
+    {% endblock %}
+    </div> -->
+
+    <!-- TODO: FINISH RESPONSIVE NAVBAR 
+        https://www.youtube.com/watch?v=biOMz4puGt8
+    -->
+    <nav class="navbar bg-background">
+        <ul class="navbar-nav">
+            <li class="logo">
+                <a href="/" class="nav-link">
+                    <span class="link-text text-2xl text-white specialtext mr-2"><div class="font-black"><mark class="redMain">Tu</mark><mark class="blueMain">Du</mark>Tul</div></span>
+                    <i class="my-1 fas fa-icons text-lg sm:text-4xl text-pink-200"></i>
+                </a>
+            </li>
             
-            <!-- BUTTONS AREA -->
-            <div class="w-full flex flex-col items-center">
-                <div class="w-11/12 mx-2 my-2 border-yellow-300 border-2 rounded-2xl">
-                    <div class="w-11/12 hover:w-full my-2 mx-auto hover:my-0 hover:mx-0 hover:py-2 hover:px-auto bg-yellow-200 flex justify-center items-center rounded-xl">
-                        <i class=" my-1 far fa-calendar-alt text-3xl"></i>
-                        <span class="w-5/12 ml-9 text-xl text-center">Calendar</span>
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <i class=" my-1 fas fa-table text-3xl sm:text-5xl text-yellow-300"></i>
+                    <span class="link-text text-yellow-300">Boards</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <i class=" my-1 far fa-calendar-alt text-3xl sm:text-5xl text-yellow-300"></i>
+                    <span class="link-text text-yellow-300">Calendar</span>
+                </a>
+            </li>
+
+            
+
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <i class=" my-1 fas fa-sign-in-alt text-3xl sm:text-5xl text-yellow-300"></i>
+                    <span class="link-text text-yellow-300">Login</span>
+                </a>
+            </li>
+
+            
+            
+            
+            
+        </ul>
+    </nav>
+    
+    <div class="w-full sm:ml-20 h-full flex flex-col xl:flex-row items-center">
+        
+        <div class="mt-10 w-full flex flex-col items-center h-full">
+            <p class="w-full text-center specialtext font-black text-4xl mb-5"><mark class="redMain">Tu</mark><mark class="blueMain">Du</mark></p>
+            <div class="flex flex-col gap-4 items-center overflow-auto cardBoxWidth w-9/10 lg:w-4/6 h-5/6 toDoScroller">
+
+                <button type="button" class="collapsible p-3 inline-block relative cardBackground border-yellow-300 border-1 rounded-3xl cardWidth w-4/6 md:w-3/6 xl:w-9/10">
+                    <div class="px-4 mx-auto mb-1 flex justify-between items-center">
+                        <p class="font-black text-white tracking-wide text-xl">Submit project</p>
+                        <input type="checkbox" name="" id="">
                     </div>
+                    <p class="mx-4 font-bold text-left text-yellow-300">15.00</p>
+                    
+                </button>
+                <div class="content w-4/7 md:w-3/7 xl:w-8/10 hidden rounded-b-2xl ">
+                    <div class="m-4 block font-semibold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt porro atque quod sapiente laborum quidem natus odio accusantium error voluptatibus velit tempora adipisci, fuga totam perspiciatis! Aperiam et consequuntur ad.</div>
                 </div>
-                <div class="w-11/12 mx-2 my-2 border-yellow-300 border-2 rounded-2xl">
-                    <div class="w-11/12 hover:w-full my-2 mx-auto hover:my-0 hover:mx-0 hover:py-2 hover:px-auto bg-yellow-200 flex justify-center items-center rounded-xl">
-                        <i class=" my-1 fas fa-sign-in-alt text-3xl"></i>
-                        <span class="w-5/12 ml-9 text-xl text-center">Sign in</span>
-                    </div>
-                </div>
+
+                
+                
                 
             </div>
         </div>
 
-        <!-- TUDU AREA -->
-        <div class="flex flex-col items-center w-2/6 h-screen ">
-            
+        <div class="mt-10 w-full flex flex-col items-center h-full">
+            <p class="w-full text-center specialtext font-black text-4xl mb-5"><mark class="blueMain">Du</mark><mark class="redMain">Ne</mark></p>
+            <div class="flex flex-col gap-4 items-center overflow-auto cardBoxWidth w-9/10 lg:w-4/6 h-5/6 toDoScroller">
+
+                   
+                
+                
+            </div>
         </div>
-        
-        <!-- DUNE AREA -->
-        <div class="flex flex-col items-center w-3/6 h-screen ">test</div>
+
         
     </div>
+
     
 </body>
 </html>
