--- a/tudutul_webapp/static/css/tailwind_compiled.css
+++ b/tudutul_webapp/static/css/tailwind_compiled.css
@@ -32269,6 +32269,14 @@ video {
     height: 5rem;
   }
 
+  .navbar:hover {
+    width:100vw;
+  }
+
+  .navbar:hover .link-text {
+    display: none;
+  }
+
   .logo {
     display: none;
   }
