Login redirect displaying user data in account

--- a/tudutul_webapp/templates/account/account.html
+++ b/tudutul_webapp/templates/account/account.html
@@ -43,7 +43,7 @@
             </div>
             <div class="gap-3 flex flex-col h-full justify-center items-center">
                 <p class="special-text tracking-wider text-indigo-100 text-3xl font-bold" >Email</p>
-                <p class="special-text tracking-wide text-yellow-300 text-xl">{{userLogin}}</p>
+                <p class="special-text tracking-wide text-yellow-300 text-xl">{{userEmail}}</p>
             </div>
             <i class="far fa-user text-8xl p-6 text-yellow-300"></i>
         </div>
