--- a/tudutul_webapp/templates/login/login.html
+++ b/tudutul_webapp/templates/login/login.html
@@ -25,7 +25,7 @@
 
                     <div class="gap-3 flex flex-col h-full">
                     <label class="special-text tracking-wider text-indigo-100 text-lg font-bold " >Password:</label>
-                    <input type="password" name="pass" id="pass" class="border-b-2 border-yellow-300 p-2 bg-transparent border-0 text-white tracking-wider flex-shrink max-w-md">
+                    <input type="password" name="password" id="password" class="border-b-2 border-yellow-300 p-2 bg-transparent border-0 text-white tracking-wider flex-shrink max-w-md">
                     </div>
 
                     <input
