--- a/tudutul_webapp/templates/app_layout.html
+++ b/tudutul_webapp/templates/app_layout.html
@@ -20,7 +20,7 @@
     {% endblock %}
 
 </head>
-<body class="mx-auto overflow-visible xl:overflow-hidden flex flex-col h-screen mainBackground p-0 m-0">
+<body class="mx-auto overflow-visible xl:overflow-hidden flex flex-col xl:h-screen mainBackground p-0 m-0">
     <!-- <div class="w-full h-1/7 flex ">
         <div class="p-4 w-1/10 flex justify-center items-center">
             <i class="fas fa-bars text-white text-2xl"></i>
@@ -39,9 +39,6 @@
     {% endblock %}
     </div> -->
 
-    <!-- TODO: FINISH RESPONSIVE NAVBAR 
-        https://www.youtube.com/watch?v=biOMz4puGt8
-    -->
     <nav class="navbar bg-background">
         <ul class="navbar-nav">
             <li class="logo">
@@ -84,11 +81,10 @@
         </ul>
     </nav>
     
-    <div class="w-full h-1/4"></div>
-    <div class="w-full sm:ml-20 h-full flex flex-col xl:flex-row items-center">
+    <div class="w-full xl:ml-20 xl:h-full flex flex-col xl:flex-row items-center">
     
     {% block main %}
-        <div class="mt-10 w-full flex flex-col items-center h-full">
+        <div class="mt-10 w-full flex flex-col items-center lg:h-full">
             <p class="w-full text-center specialtext font-black text-4xl mb-5"><mark class="redMain">Tu</mark><mark class="blueMain">Du</mark></p>
             <div id="tuDuContainer" class="flex flex-col gap-4 items-center overflow-auto cardBoxWidth w-9/10 lg:w-4/6 h-5/6 toDoScroller">
 
@@ -100,9 +96,9 @@
             </div>
         </div>
 
-        <div class="mt-10 w-full flex flex-col items-center h-full">
+        <div class="mb-32 xl:mb-8 mt-10 w-full flex flex-col items-center lg:h-full">
             <p class="w-full text-center specialtext font-black text-4xl mb-5"><mark class="blueMain">Du</mark><mark class="redMain">Ne</mark></p>
-            <div id="duNeContainer" class="flex flex-col gap-4 items-center overflow-auto cardBoxWidth w-9/10 lg:w-4/6 h-5/6 toDoScroller">
+            <div id="duNeContainer" class="min-h-16 flex flex-col gap-4 items-center overflow-auto cardBoxWidth w-9/10 lg:w-4/6 h-5/6 toDoScroller">
 
                    
                 
