--- a/tudutul_webapp/static/css/tailwind_compiled.css
+++ b/tudutul_webapp/static/css/tailwind_compiled.css
@@ -32201,7 +32201,7 @@ video {
   --app-background: #400d40;
   --mincardwidth: 35ch;
   --maxcardwidth: 65ch;
-  --transition-speed: 600ms;
+  --transition-speed: 300ms;
 }
 
 .navbar {
@@ -32310,7 +32310,7 @@ video {
   display: block;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 1s ease-out;
+  /* transition: max-height var(--transition-speed) ease-out; */
   margin-top: -4%;
 }
 
