--- a/tudutul_webapp/templates/note-app/offline-notes.html
+++ b/tudutul_webapp/templates/note-app/offline-notes.html
@@ -16,6 +16,20 @@
 </li>
 
 <li class="nav-item">
+    <a class="nav-link" onClick="getTuDuDisplayModule();">
+        <i class=" my-1 fas fa-tv text-3xl sm:text-5xl text-yellow-300"></i>
+        <span class="link-text text-yellow-300">Display</span>
+    </a>
+</li>
+
+<li class="nav-item">
+    <a class="nav-link" onClick="getFormModule();">
+        <i class=" my-1 fas fa-plus text-3xl sm:text-5xl text-yellow-300"></i>
+        <span class="link-text text-yellow-300">Add</span>
+    </a>
+</li>
+
+<li class="nav-item">
     <a href="/login" class="nav-link">
         <i class=" my-1 fas fa-sign-in-alt text-3xl sm:text-5xl text-yellow-300"></i>
         <span class="link-text text-yellow-300">Login</span>
