Fix display bug and small screen display

--- a/tudutul_webapp/src/css/tailwind.css
+++ b/tudutul_webapp/src/css/tailwind.css
@@ -22,6 +22,11 @@
     
 }
 
+#tuDuContainer, #duNeContainer {
+    min-height: 300px;
+}
+
+
 .navbar-nav {
     list-style: none;
     padding: 0;
