--- a/tudutul_webapp/static/css/tailwind_compiled.css
+++ b/tudutul_webapp/static/css/tailwind_compiled.css
@@ -32211,6 +32211,10 @@ video {
   transition: width 200ms ease;
 }
 
+#tuDuContainer, #duNeContainer {
+  min-height: 300px;
+}
+
 .navbar-nav {
   list-style: none;
   padding: 0;
