Calendar integrated with offline notes

--- a/tudutul_webapp/templates/app_layout.html
+++ b/tudutul_webapp/templates/app_layout.html
@@ -20,6 +20,7 @@
     {% endblock %}
 
 </head>
+{% block body %}
 <body class="mx-auto overflow-visible xl:overflow-hidden flex flex-col xl:h-screen mainBackground p-0 m-0">
     <!-- <div class="w-full h-1/7 flex ">
         <div class="p-4 w-1/10 flex justify-center items-center">
@@ -121,4 +122,5 @@
 
     
 </body>
+{% endblock %}
 </html>
