--- a/tudutul_webapp/templates/note-app/offline-calendar.html
+++ b/tudutul_webapp/templates/note-app/offline-calendar.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
     <script src='{% static "js/evo-calendar.js" %}' defer></script>
     <script src='{% static "js/tudutul_calendar.js" %}' defer></script>
-    <script src='{% static "js/offline_notes.js" %}' defer></script>
+    <!-- <script src='{% static "js/offline_notes.js" %}' defer></script> -->
 
     
 {% endblock %}
