--- a/tudutul_webapp/templates/note-app/offline-notes.html
+++ b/tudutul_webapp/templates/note-app/offline-notes.html
@@ -9,7 +9,7 @@
 {% block navbarbuttons %}
 
 <li class="nav-item">
-    <a href="#" class="nav-link">
+    <a href="/offline/calendar" class="nav-link">
         <i class=" my-1 far fa-calendar-alt text-3xl sm:text-5xl text-yellow-300"></i>
         <span class="link-text text-yellow-300">Calendar</span>
     </a>
