Calendar and font fixed

--- a/tudutul_webapp/src/css/tailwind.css
+++ b/tudutul_webapp/src/css/tailwind.css
@@ -263,6 +263,10 @@ html, body {
     margin: 0;
 }
 
+/* body {
+    font-family: 'Source Sans Pro';
+} */
+
 input:focus, textarea:focus, button:focus {
     outline: none;
 }
